# runpod-worker-faster_whisper

./: .gitignore  Dockerfile  README.md  pyproject.toml
.runpod/: tests.json
builder/: fetch_models.py  requirements.txt
src/: corrector.py  predict.py  rp_handler.py  rp_schema.py
